# neural-haskell

./: .gitignore  LICENSE  README.md  neural-haskell.cabal  neuralhaskell.cabal  neuralhaskell.prof  pythontest.py  stack.yaml
app/: Main.hs
src/: AutoDiff.hs  Network.hs  Neuron.hs
src/Network/: Classic.hs  CommonTypes.hs  Convolutional.hs  Neuron.hs  Neurons.hs  Types.hs
src/Network/Classic/: Network.hs  Neuron.hs  Neurons.hs  Types.hs
src/Network/Convolutional/: Activation.hs  Kernel.hs  Kernels.hs  Network.hs  Pool.hs  Types.hs
src/Neuron/: Model.hs  Perceptron.hs
test/: AutoDiffSpec.hs  NeuronSpec.hs
test/Network/Convolutional/: NetworkSpec.hs
